[WinCairo] GraphicsContextCairo::GraphicsContextCairo(HDC, bool) leaks cairo_t https://bugs.webkit.org/show_bug.cgi?id=226317

Reviewed by Don Olmstead.

* platform/graphics/win/GraphicsContextCairoWin.cpp:
(WebCore::createCairoContextWithHDC): Changed the return type from cairo_t* to RefPtr<cairo_t>.
(WebCore::GraphicsContextCairo::GraphicsContextCairo):

Canonical link: https://commits.webkit.org/238359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278323 268f45cc-cd09-0410-ab3c-d52691b4dbfc